Disable favicon requests by including one

--- a/static/index.html
+++ b/static/index.html
@@ -1,1 +1,11 @@
-Chatbot running.
+<!doctype html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <title>ElectionBot</title>
+    <link rel="icon" href="data:;base64,=" />
+</head>
+<body>
+    Chatbot running.
+</body>
+</html>
